# zia

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  index.html.jinja2  main.py  pyproject.toml  zia.py
src/: config.rs  main.rs  zia.rs
testdata/: config.toml  zoo.rs
